# rs-rpi-pico-co2sensor

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: main.rs
